# GFML

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: GFMLConfig.cmake.in
examples/: main.cpp
include/GFML/: Button.hpp  GFML.hpp  TextArea.hpp
pkg/: PKGBUILD
src/: Button.cpp  GFML.cpp  TextArea.cpp
